--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,6 +2,19 @@
 <html lang="{{ .Site.LanguageCode }}">
 <head>
 
+<link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
+<link rel="preconnect" href="//www.google-analytics.com/analytics.js" crossorigin="anonymous">
+
+{{ if eq .Title "juntaki" }}
+<link rel="prerender" href="/blog/">
+{{ end }}
+
+{{ if eq .Title "Blogs" }}
+{{ range first 1 .Data.Pages.ByPublishDate.Reverse }}
+<link rel="prerender" href="{{ .Permalink }}">
+{{ end }}
+{{ end }}
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -12,7 +25,11 @@
 
 <base href="{{ .Site.BaseURL }}">
 
+{{ if eq .Title "juntaki" }}
 <title>{{ .Site.Title }}</title>
+{{ else }}
+<title>{{ .Title }} - {{ .Site.Title }}</title>
+{{ end }}
 
 {{ .Hugo.Generator }}
 
@@ -25,8 +42,9 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/default.min.css">
 {{ end }}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto+Slab:400|Roboto:300">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:300,00|Roboto+Slab:400|Roboto:300">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
 {{ range .Site.Params.custom_css -}}
 <link rel="stylesheet" href="{{ . | absURL }}">
@@ -34,8 +52,8 @@
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script src="//oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
