--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,11 @@
 <head>
 
 <link rel="preconnect" href="//fonts.gstatic.com/" crossorigin>
-<link rel="preconnect" href="//www.google-analytics.com/analytics.js" crossorigin="anonymous">
+<link rel="preconnect" href="//c.disquscdn.com/" crossorigin>
+<link rel="preconnect" href="//res.cloudinary.com/" crossorigin>
+
+<link rel="prefetch" href="//https-juntaki-com.disqus.com/embed.js" crossorigin>
+<link rel="prefetch" href="//www.google-analytics.com/analytics.js" crossorigin>
 
 {{ if eq .Title "juntaki" }}
 <link rel="prerender" href="/blog/">
